--- a/index.html
+++ b/index.html
@@ -49,6 +49,7 @@
                     <a href="about.html" class="nav-item nav-link">Nosotros</a>
                     <a href="service.html" class="nav-item nav-link">Productos</a>
                     <a href="franquicia.html" class="nav-item nav-link">Franquicias</a>
+                    <a href="work.html" class="nav-item nav-link">Trabaja con nosotros</a>
                     <a href="contact.html" class="nav-item nav-link">Contacto</a>
                 </div>
             </div>
@@ -157,7 +158,7 @@
                         </div>
                         <div class="col-sm-7">
                             <h4><i class="#"></i>Tentación Franui</h4>
-                            <p class="m-0">Masa crujiente de vainilla, reducción de frutos rojos, doble ganache (blanco y negro) y Franouilles. Dulce, fresca y gourmet.</p>
+                            <p class="m-0">Masa crujiente de vainilla, reducción de frutos rojos, doble ganache (blanco y negro) y Franui. Dulce, fresca y gourmet.</p>
                         </div>
                     </div>
                 </div>
