--- a/work.html
+++ b/work.html
@@ -48,6 +48,7 @@
                     <a href="about.html" class="nav-item nav-link">Nosotros</a>
                     <a href="service.html" class="nav-item nav-link">Productos</a>
                     <a href="franquicia.html" class="nav-item nav-link">Franquicias</a>
+                    <a href="work.html" class="nav-item nav-link">Trabaja con nosotros</a>
                     <a href="contact.html" class="nav-item nav-link">Contacto</a>
                 </div>
             </div>
