--- a/about.html
+++ b/about.html
@@ -8,6 +8,20 @@
     <meta content="Free Website Template" name="keywords">
     <meta content="Free Website Template" name="description">
 
+<meta name="description" content="Conoce I Love Palermo Cafe: un lugar donde cuidamos cada paso con ingredientes de calidad y atención cercana en Palermo, Buenos Aires.">
+<meta name="keywords" content="nosotros I Love Palermo Cafe, café artesanal Buenos Aires, pastelería calidad, trato humano">
+<link rel="canonical" href="https://www.ilovepalermocafe.com/about.html">
+
+<meta property="og:title" content="Nosotros · I Love Palermo Cafe">
+<meta property="og:description" content="Historias, enfoque y valores: pastelería artesanal, ingredientes de calidad y atención personalizada en Palermo.">
+<meta property="og:type" content="article">
+<meta property="og:url" content="https://www.ilovepalermocafe.com/about.html">
+<meta property="og:site_name" content="I Love Palermo Cafe">
+
+<meta name="twitter:card" content="summary_large_image">
+<meta name="twitter:title" content="Nosotros · I Love Palermo Cafe">
+<meta name="twitter:description" content="Descubre nuestros valores: calidad, pastelería artesanal y atención cercana desde Palermo, Buenos Aires.">
+
     <!-- Favicon -->
     <link href="img/logo_corto_transparente.png" rel="icon">
 
