--- a/contact.html
+++ b/contact.html
@@ -7,6 +7,20 @@
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
     <meta content="Free Website Template" name="keywords">
     <meta content="Free Website Template" name="description">
+<meta name="description" content="Contactanos para reservas, pedidos o consultas. I Love Palermo Cafe te espera en Palermo, Buenos Aires.">
+<meta name="keywords" content="contacto café Palermo, reservas café, café Buenos Aires, I Love Palermo Cafe">
+<link rel="canonical" href="https://ilovepalermocafe.com/contact.html">
+
+<meta property="og:title" content="Contacto · I Love Palermo Cafe">
+<meta property="og:description" content="¿Querés reservar, consultar o simplemente saludarnos? Escribinos o visitanos en Palermo.">
+<meta property="og:type" content="website">
+<meta property="og:url" content="https://ilovepalermocafe.com/contact.html">
+<meta property="og:image" content="https://ilovepalermocafe.com/assets/og-contact.jpg">
+
+<meta name="twitter:card" content="summary_large_image">
+<meta name="twitter:title" content="Contacto · I Love Palermo Cafe">
+<meta name="twitter:description" content="Encontranos en Palermo, Buenos Aires. Consultas, reservas y más.">
+<meta name="twitter:image" content="https://ilovepalermocafe.com/assets/og-contact.jpg">
 
     <!-- Favicon -->
     <link href="img/logo_corto_transparente.png" rel="icon">
