--- a/franquicia.html
+++ b/franquicia.html
@@ -7,6 +7,20 @@
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
     <meta content="Free Website Template" name="keywords">
     <meta content="Free Website Template" name="description">
+<meta name="description" content="Conocé cómo abrir tu propia franquicia de I Love Palermo Cafe. Llevá la experiencia del café de especialidad a tu ciudad.">
+<meta name="keywords" content="franquicia café, abrir cafetería, I Love Palermo Cafe, franquicias Buenos Aires, Palermo coffee franchise">
+<link rel="canonical" href="https://ilovepalermocafe.com/franquicia.html">
+
+<meta property="og:title" content="Franquicias · I Love Palermo Cafe">
+<meta property="og:description" content="Abrí tu franquicia de café y sé parte de una marca en crecimiento. Calidad, experiencia y acompañamiento.">
+<meta property="og:type" content="article">
+<meta property="og:url" content="https://ilovepalermocafe.com/franquicia.html">
+
+
+<meta name="twitter:card" content="summary_large_image">
+<meta name="twitter:title" content="Franquicias · I Love Palermo Cafe">
+<meta name="twitter:description" content="Crecé con nosotros. Invertí en una franquicia de café de especialidad.">
+
 
     <!-- Favicon -->
     <link href="img/logo_corto_transparente.png" rel="icon">
