--- a/index.html
+++ b/index.html
@@ -7,6 +7,20 @@
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
     <meta content="Free Website Template" name="keywords">
     <meta content="Free Website Template" name="description">
+    <meta name="description" content="I Love Palermo Cafe: café de especialidad y pastelería artesanal en Palermo, Buenos Aires. Café, medialunas y postres con ingredientes de calidad.">
+    <meta name="keywords" content="café artesanal Palermo, café de especialidad Buenos Aires, pastelería Palermo, I Love Palermo Cafe">
+    <meta name="robots" content="index, follow">
+    <link rel="canonical" href="https://www.ilovepalermocafe.com/">
+
+    <meta property="og:title" content="I Love Palermo Cafe · Café artesanal en Palermo">
+    <meta property="og:description" content="Especialidad, calidad y sabor en cada café y postre. Visitanos en Palermo, Buenos Aires.">
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="https://www.ilovepalermocafe.com/">
+    <meta property="og:site_name" content="I Love Palermo Cafe">
+
+    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:title" content="I Love Palermo Cafe · Café artesanal en Palermo">
+    <meta name="twitter:description" content="Café de especialidad y pastelería artesanal en Palermo, Buenos Aires.">
 
     <!-- Favicon -->
     <link href="img/logo_corto_transparente.png" rel="icon">
