--- a/service.html
+++ b/service.html
@@ -7,6 +7,19 @@
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
     <meta content="Free Website Template" name="keywords">
     <meta content="Free Website Template" name="description">
+<meta name="description" content="Ofrecemos servicios de café para eventos, catering, cumpleaños y más. Llevamos la experiencia Palermo a tu evento.">
+<meta name="keywords" content="servicio café eventos, catering Palermo, coffee truck, I Love Palermo Cafe, eventos Buenos Aires">
+<link rel="canonical" href="https://ilovepalermocafe.com/service.html">
+
+<meta property="og:title" content="Servicios para eventos · I Love Palermo Cafe">
+<meta property="og:description" content="Catering, café y pastelería para eventos y celebraciones. Llevamos nuestra experiencia a vos.">
+<meta property="og:type" content="website">
+<meta property="og:url" content="https://ilovepalermocafe.com/service.html">
+
+<meta name="twitter:card" content="summary_large_image">
+<meta name="twitter:title" content="Eventos con café · I Love Palermo Cafe">
+<meta name="twitter:description" content="Transformá tu evento con café de especialidad y pastelería artesanal.">
+
 
     <!-- Favicon -->
     <link href="img/logo_corto_transparente.png" rel="icon">
