--- a/work.html
+++ b/work.html
@@ -6,7 +6,20 @@
     <title>I Love Palermo - Sumate</title>
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
     <meta content="Free Website Template" name="keywords">
-    <meta content="Free Website Template" name="description">
+    <meta content="Free Website Template" name="description">   
+<meta name="description" content="Buscamos personas con pasión por el café, la atención y el trabajo en equipo. Sumate a I Love Palermo Cafe en Palermo.">
+<meta name="keywords" content="trabajo café Palermo, empleo cafetería Buenos Aires, barista Palermo, trabajar en I Love Palermo Cafe">
+<link rel="canonical" href="https://ilovepalermocafe.com/work.html">
+
+<meta property="og:title" content="Trabajá con nosotros · I Love Palermo Cafe">
+<meta property="og:description" content="Sumate al equipo de una de las cafeterías más queridas de Palermo. Valoramos la calidez, el compromiso y el amor por el café.">
+<meta property="og:type" content="website">
+<meta property="og:url" content="https://ilovepalermocafe.com/work.html">
+
+<meta name="twitter:card" content="summary_large_image">
+<meta name="twitter:title" content="Trabajá en I Love Palermo Cafe">
+<meta name="twitter:description" content="Buscamos personas apasionadas por el café y la atención. Sumate en Palermo.">
+
 
     <!-- Favicon -->
     <link href="img/logo_corto_transparente.png" rel="icon">
